apps/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  type: LoadBalancer
  loadBalancerIP: 192.168.50.15
