apps/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-tls
  annotations:
    cert-manager.io/cluster-issuer: global-issuer
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: haproxy
  tls:
  - secretName: mosquitto-tls
    hosts:
    - mqtt.${INGRESS_DOMAIN}
  rules:
  - host: mqtt.${INGRESS_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto-ws
            port: 
              number: 8883
